productions/agentkit-cli/archives/0.51.0/en/commands/release.mdx
---
title: "Release"
zh_link: "/productions/agentkit-cli/archives/0.51.0/zh/commands/release"
---

`release` runs the full `.agentkit/agentkit.yaml` release pipeline: scaffold release config, build the image in the cloud, create or update the AgentKit Runtime, and optionally release Feishu, WeCom, DingTalk proxies or a frontend BFF. If you use the root `agentkit.yaml` lifecycle config, use [`launch`](/productions/agentkit-cli/archives/0.51.0/en/commands/launch) instead.

## release

Without a subcommand, `release` runs the full pipeline. If `.agentkit/agentkit.yaml` is missing, it first generates the config and asks you to review it before running the command again.

| Flag / Argument | Description | Default |
| --- | --- | --- |
| `-n, --name <name>` | Runtime or app name used during config. | Current directory name |
| `-r, --region <region>` | Cloud region used during config. | Provider default region |
| `-p, --project <name>` | AgentKit project. | `default` |
| `--im-feishu` | Release a Feishu bot proxy after the runtime release. | `false` |
| `--im-feishu-app-id <id>` | Feishu App ID for the proxy. | `im.feishu.app_id` or `FEISHU_APP_ID` |
| `--im-feishu-app-secret <secret>` | Feishu App Secret for the proxy; prefer `FEISHU_APP_SECRET`. | `im.feishu.app_secret` or `FEISHU_APP_SECRET` |

```bash lines
agentkit release --name my-agent --region cn-beijing --project default
```

<Warning>
`release` creates or updates cloud runtimes and may create VeFaaS functions, gateways, container registry resources, TOS objects, and identity configuration. Confirm `.agentkit/agentkit.yaml`, credentials, region, and project before running it.
</Warning>

## release config

Generate `.agentkit/agentkit.yaml` and a Dockerfile.

| Flag / Argument | Description | Default |
| --- | --- | --- |
| `-n, --name <name>` | Runtime or app name. | Current directory name |
| `-r, --region <region>` | Cloud region. | Provider default region |
| `-p, --project <name>` | AgentKit project. | `default` |
| `-f, --force` | Overwrite existing generated files. | `false` |

```bash lines
agentkit release config --name my-agent --force
```

## release build

Build the image in the cloud from `.agentkit/agentkit.yaml` and write build artifacts under `.agentkit/artifacts/`.

| Flag / Argument | Description | Default |
| --- | --- | --- |
| _(no options)_ | This subcommand takes no options. | — |

```bash lines
agentkit release build
```

## release apply

Create or update the runtime from the latest built artifact.

| Flag / Argument | Description | Default |
| --- | --- | --- |
| _(no options)_ | This subcommand takes no options. | — |

```bash lines
agentkit release apply
```

IM channel and frontend release settings still live in `.agentkit/agentkit.yaml`; see [agentkit.yaml](/productions/agentkit-cli/archives/0.51.0/en/agentkit-yaml) for field details.
